force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/Quiz_de_contacto_en_cohorte__c.object-meta.xml
<CustomObject>
    <label>Quiz de contacto en cohorte</label>
    <nameField>
        <displayFormat>QCC-{0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quizzes de contacto en cohorte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>