force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Aprobado?</label>
    <type>Checkbox</type>
</CustomField>