force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>