force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/fields/Miembro_de_la_cohorte__c.field-meta.xml
<CustomField>
    <fullName>Miembro_de_la_cohorte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Miembro de la cohorte</label>
    <referenceTo>Miembro_de_la_cohorte__c</referenceTo>
    <relationshipLabel>Quizzes de contacto en cohorte</relationshipLabel>
    <relationshipName>Quizzes_de_contacto_en_cohorte</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>