force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <label>Quiz</label>
    <referenceTo>Quiz__c</referenceTo>
    <relationshipLabel>Quizzes de contacto en cohorte</relationshipLabel>
    <relationshipName>Quizzes_de_contacto_en_cohorte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>