force-app/main/default/objects/Quiz_de_contacto_en_cohorte__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>